--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,11 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/petejohanson
+      url-base: https://github.com/0nOff
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: core/peripheral-behavior-invocation
+      revision: main
       import: app/west.yml
   self:
     path: config
