--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
@@ -10,3 +10,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+
+# Turn on logging, and set ZMK logging to debug output
+CONFIG_ZMK_USB_LOGGING=y
