--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -12,4 +12,9 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 # Turn on logging, and set ZMK logging to debug output
-#CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_USB_LOGGING=n
+
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=300000
